# mcu_viewer_test_case

./: CMakeLists.txt  CMakePresets.json  README.md
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/Device/: CMakeLists.txt
Drivers/CMSIS/Device/ST/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32G4xx/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32G4xx/Include/: CMakeLists.txt
Drivers/CMSIS/Include/: CMakeLists.txt
Drivers/STM32G4xx_HAL_Driver/Inc/: CMakeLists.txt
Drivers/STM32G4xx_HAL_Driver/Src/: CMakeLists.txt
Inc/: CMakeLists.txt  drive_parameters.h  main.h  mc_config_common.h  mc_configuration_registers.h  pmsm_motor_parameters.h  power_stage_parameters.h  stm32g4xx_hal_conf.h
MCSDK_v6.3.2-Full/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/MCSDK/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/MCSDK/MCLib/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/MCSDK/MCLib/Any/Inc/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/MCSDK/MCLib/Any/Src/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/MCSDK/MCLib/G4xx/Inc/: CMakeLists.txt
MCSDK_v6.3.2-Full/MotorControl/MCSDK/MCLib/G4xx/Src/: CMakeLists.txt
STM32CubeIDE/Application/: CMakeLists.txt
STM32CubeIDE/Application/Startup/: CMakeLists.txt
STM32CubeIDE/Application/User/: CMakeLists.txt
Src/: CMakeLists.txt  main.c  mc_config_common.c  mc_configuration_registers.c  mc_tasks.c  mc_tasks_foc.c  stm32g4xx_hal_msp.c  stm32g4xx_mc_it.c
